--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+#Mysql
+spring.datasource.url= jdbc:mysql://localhost:3306/udemy
+spring.datasource.username=root
+spring.datasource.password=J4rv4nCu4tro4
+spring.jpa.hibernate.ddl-auto=none
+
+#Exibe os comandos SQL
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
+
 
